test/files/parser/errors/define-assign.organic
// Define with no curly braces
// 4 ~ 10 ~ Expected "{", received "0".

sine() = 0
